--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     <body>
 
         <script language="javascript" type="text/javascript" src="js/vendor/p5.js"></script>
-        <!--<script language="javascript" src="js/vendor/p5.dom.js"></script>-->
+        <script language="javascript" src="js/vendor/p5.dom.js"></script>
         <!--<script language="javascript" src="js/vendor/p5.sound.js"></script>-->
         <div id="first"></div>
         <div id="second"></div>
-        <script src="js/main.js"></script>
+        <!-- <script src="js/main.js"></script> -->
+        <script src="js/combined.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
+
     </body>
 </html>
