--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 	<title>welcome to the draw space!</title>
 
 	<script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
-	<script src="../libraries/p5.js"></script>
-	<script src="../libraries/p5.dom.js"></script>
-	<script src="../libraries/p5.sound.js"></script>
+	<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.js"></script>
+	<!-- <script src="../libraries/p5.sound.js"></script> -->
 	<script src="sketch.js"></script>
 
 	<style>
