--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="first"></div>
         <div id="second"></div>
         <!-- <script src="js/main.js"></script> -->
-        <script src="js/main.js"></script>
+        <script src="js/combined.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
 
     </body>
