--- a/3d.html
+++ b/3d.html
@@ -21,6 +21,8 @@
 
         <script language="javascript" type="text/javascript" src="js/vendor/p5.js"></script>
         <script language="javascript" src="js/vendor/p5.dom.js"></script>
+        <script language="javascript" src="js/vendor/p5.serialport.js"></script>
+
         <!--<script language="javascript" src="js/vendor/p5.sound.js"></script>-->
         <div id="first"></div>
         <div id="second"></div>
