--- a/continuousline_audio.html
+++ b/continuousline_audio.html
@@ -22,11 +22,11 @@
         <script language="javascript" type="text/javascript" src="js/vendor/p5.js"></script>
         <script language="javascript" src="js/vendor/p5.dom.js"></script>
         <script language="javascript" src="js/vendor/p5.sound.js"></script>
-        
+
         <div id="first"></div>
         <div id="second"></div>
         <!-- <script src="js/main.js"></script> -->
-        <script src="js/continuous.js"></script>
+        <script src="js/continuous_audio.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
         <p>
             <ol id="drawinglist">
