--- a/spiral-control.html
+++ b/spiral-control.html
@@ -15,7 +15,7 @@
         <script language="javascript" src="js/vendor/p5.sound.js"></script>
         <script language="javascript" src="js/vendor/p5.serialport.js"></script>
 
-       <style>
+        <style>
         #second{
             padding:500px;
         }
@@ -31,7 +31,7 @@
         <div id="first"></div>
         <div id="second"></div>
         <!-- <script src="js/main.js"></script> -->
-        <script src="js/display_spiral-audio.js"></script>
+        <script src="js/spiral-control.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
 
     </body>
