--- a/spiral-audio.html
+++ b/spiral-audio.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script language="javascript" type="text/javascript" src="js/vendor/p5.js"></script>
-        <script language="javascript" src="js/vendor/p5.dom.js"></script>
+        <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
         <script language="javascript" src="js/vendor/p5.sound.js"></script>
         <script language="javascript" src="js/vendor/p5.serialport.js"></script>
 
