--- a/spiral-control.html
+++ b/spiral-control.html
@@ -31,7 +31,7 @@
         <div id="first"></div>
         <div id="second"></div>
         <!-- <script src="js/main.js"></script> -->
-        <script src="js/spiral-control.js"></script>
+        <script src="js/spiral-control-audio.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
 
     </body>
